# setuptoolstest

./: main.py  pyproject.toml
.github/workflows/: main.yaml
