[tool.poetry]
name = "setuptoolstest"
version = "0.1.0"
description = ""
authors = ["Ashish Patil <106663586+AshpatTW@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^4.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
